--- a/agent-claim0-persistentvolumeclaim.yaml
+++ b/agent-claim0-persistentvolumeclaim.yaml
@@ -1,3 +1,39 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: agent-sc
+  labels:
+   io.kompose.service: agent-claim0
+   io.kompose.service: agent-claim1
+   io.kompose.service: agent-claim2
+   io.kompose.service: agent-claim3
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+mountOptions:
+  - debug
+volumeBindingMode: Immediate
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: agent-pv
+  labels:
+    io.kompose.service: agent-claim0
+    io.kompose.service: agent-claim1
+    io.kompose.service: agent-claim2
+    io.kompose.service: agent-claim3
+spec:
+  storageClassName: agent-sc
+  capacity:
+    storage: 500Mi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: "/hdfs"
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -6,8 +42,9 @@ metadata:
     io.kompose.service: agent-claim0
   name: agent-claim0
 spec:
+  storageClassName: agent-sc
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 100Mi
