--- a/agent-claim1-persistentvolumeclaim.yaml
+++ b/agent-claim1-persistentvolumeclaim.yaml
@@ -1,9 +1,45 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: agent-sc
+  labels:
+   io.kompose.service: agent-claim0
+   io.kompose.service: agent-claim1
+   io.kompose.service: agent-claim2
+   io.kompose.service: agent-claim3
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+mountOptions:
+  - debug
+volumeBindingMode: Immediate
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: agent-pv
+  labels:
+    io.kompose.service: agent-claim0
+    io.kompose.service: agent-claim1
+    io.kompose.service: agent-claim2
+    io.kompose.service: agent-claim3
+spec:
+  storageClassName: agent-sc
+  capacity:
+    storage: 200Mi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: "/hdfs"
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: agent-claim1
+    io.kompose.service: agent-claim0
   name: agent-claim1
 spec:
   storageClassName: agent-sc
