--- a/evidently-service-claim0-persistentvolumeclaim.yaml
+++ b/evidently-service-claim0-persistentvolumeclaim.yaml
@@ -1,3 +1,33 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: evidently-service-sc0
+  labels:
+   io.kompose.service: evidently-service-claim0
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+mountOptions:
+  - debug
+volumeBindingMode: Immediate
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: evidently-service-pv
+  labels:
+    io.kompose.service: evidently-service-claim0
+spec:
+  storageClassName: evidently-service-sc0
+  capacity:
+    storage: 200Mi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/hdfs"
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -6,6 +36,7 @@ metadata:
     io.kompose.service: evidently-service-claim0
   name: evidently-service-claim0
 spec:
+  storageClassName: evidently-service-sc0
   accessModes:
     - ReadWriteOnce
   resources:
