--- a/grafana-claim1-persistentvolumeclaim.yaml
+++ b/grafana-claim1-persistentvolumeclaim.yaml
@@ -1,13 +1,44 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: grafana-sc1
+  labels:
+   io.kompose.service: grafana
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+mountOptions:
+  - debug
+volumeBindingMode: Immediate
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: grafana-pv1
+  labels:
+    io.kompose.service: grafana
+spec:
+  storageClassName: grafana-sc1
+  capacity:
+    storage: 200Mi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/hdfs"
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: grafana-claim1
+    io.kompose.service: grafana
   name: grafana-claim1
 spec:
+  storageClassName: grafana-sc1
   accessModes:
-    - ReadOnlyMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
