--- a/grafana-claim2-persistentvolumeclaim.yaml
+++ b/grafana-claim2-persistentvolumeclaim.yaml
@@ -1,11 +1,42 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: grafana-sc2
+  labels:
+   io.kompose.service: grafana
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+mountOptions:
+  - debug
+volumeBindingMode: Immediate
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: grafana-pv2
+  labels:
+    io.kompose.service: grafana
+spec:
+  storageClassName: grafana-sc2
+  capacity:
+    storage: 200Mi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/hdfs"
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: grafana-claim2
+    io.kompose.service: grafana
   name: grafana-claim2
 spec:
+  storageClassName: grafana-sc2
   accessModes:
     - ReadWriteOnce
   resources:
