--- a/mongo-claim0-persistentvolumeclaim.yaml
+++ b/mongo-claim0-persistentvolumeclaim.yaml
@@ -1,11 +1,42 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: mongo-sc
+  labels:
+   io.kompose.service: mongo
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+mountOptions:
+  - debug
+volumeBindingMode: Immediate
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: mongo-pv
+  labels:
+    io.kompose.service: mongo
+spec:
+  storageClassName: mongo-sc
+  capacity:
+    storage: 200Mi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/hdfs"
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: mongo-claim0
+    io.kompose.service: mongo
   name: mongo-claim0
 spec:
+  storageClassName: mongo-sc
   accessModes:
     - ReadWriteOnce
   resources:
