--- a/mlflow-server-deployment.yaml
+++ b/mlflow-server-deployment.yaml
@@ -26,7 +26,7 @@ spec:
         io.kompose.service: mlflow-server
     spec:
       containers:
-        - image: mlflow_server
+        - image: neha2299/mlflow-server
           name: mlflow-server
           ports:
             - containerPort: 5050
