--- a/prefect-server-claim0-persistentvolumeclaim.yaml
+++ b/prefect-server-claim0-persistentvolumeclaim.yaml
@@ -1,11 +1,42 @@
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: prefect-server-sc0
+  labels:
+   io.kompose.service: prefect-server
+provisioner: kubernetes.io/aws-ebs
+parameters:
+  type: gp2
+reclaimPolicy: Retain
+allowVolumeExpansion: true
+mountOptions:
+  - debug
+volumeBindingMode: Immediate
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: prefect-server-pv0
+  labels:
+    io.kompose.service: prefect-server
+spec:
+  storageClassName: prefect-server-sc0
+  capacity:
+    storage: 200Mi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/hdfs"
+---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: prefect-server-claim0
+    io.kompose.service: prefect-server
   name: prefect-server-claim0
 spec:
+  storageClassName: prefect-server-sc0
   accessModes:
     - ReadWriteOnce
   resources:
