--- a/prefect-server-deployment.yaml
+++ b/prefect-server-deployment.yaml
@@ -26,7 +26,7 @@ spec:
         io.kompose.service: prefect-server
     spec:
       containers:
-        - image: prefect_server
+        - image: neha2299/prefect_server
           name: prefect-server
           ports:
             - containerPort: 4200
